# tahoestaticfs

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.py
tahoefuse/: blockcache.py  cachedb.py  cli.py  crypto.py  fs.py  tahoefuse  tahoeio.py
tahoefuse/tests/: test_blockcache.py  test_cachedb.py  test_crypto.py
tahoestaticfs/: __init__.py  blockcache.py  cachedb.py  cli.py  crypto.py  staticfs.py  tahoeio.py  tahoestaticfs
tahoestaticfs/tests/: test_blockcache.py  test_cachedb.py  test_crypto.py  tools.py
